# element-skin

./: .env.example  .gitignore  AGENTS.md  LICENSE.txt  README.md  RELEASE.md  agents.md  config.yaml  docker-compose.yml  nginx-host.conf
doc/: Element-Skin-v1-API设计规范.md  OAuth2.1标准与扩展参考.md  Union-ElementSkin2-Python参考实现.md  Yggdrasil-服务端技术规范.md  union-element-skin.md  union-protocol-php.md  union-svc-Go实现手册.md  权限模型开发者规范.md  权限模型设计方案.md  正版登录接口规范.md  编码规范.md  通知系统与公告功能开发方案.md
docs/: union-branch-strategy.md
element-skin/: README.md  env.d.ts  package.json  vite.config.ts
python-sdk/: README.md  pyproject.toml
python-sdk/demo/: invite_admin_demo.py  public_invite_admin_demo.py
python-sdk/doc/: API客户端.md  OAuth流程.md  README.md  快速开始.md  权限模型.md  测试规范.md  错误与Token.md
python-sdk/src/element_skin_sdk/: __init__.py  exceptions.py  http.py  models.py
python-sdk/src/element_skin_sdk/api/: __init__.py  client.py
python-sdk/src/element_skin_sdk/oauth/: __init__.py  client.py  pkce.py  token_store.py
python-sdk/src/element_skin_sdk/permissions/: __init__.py  catalog.py  scopes.py  validator.py
python-sdk/tests/: conftest.py  fixtures.py  test_api_client.py  test_http.py  test_models.py  test_oauth_client.py  test_permissions.py  test_pkce.py  test_token_store.py
reports/: concurrency-load-test-redis.md  concurrency-load-test.md  oauth-mixed-load-test.md  permission-loadtest-impact.md
skin-backend/: Dockerfile  README.md  backend.py  config.yaml  config_loader.py  database.py  entrypoint.sh  go.mod  go.sum  microsoft_auth.py  models.py  pytest.ini  (+2 more)
(+1044 files in other folders)
