[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "element-skin-sdk"
version = "0.1.0"
description = "Python SDK for Element Skin OAuth and API access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.24",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["element_skin_sdk"]

[tool.coverage.report]
fail_under = 100
show_missing = true
